[project]
name = "warehouserouter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.13.8",
    "gymnax>=0.0.9",
    "imageio>=2.37.3",
    "jax[cuda13]>=0.10.1",
    "jaxtyping>=0.3.10",
    "matplotlib>=3.10.9",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "wandb>=0.27.0",
]
